Добавлена страница - База отдыха, добавлен и изменён контент в разделах - цена, оформление ребёнка, что взять с собой, посещение ребёнка

--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -92,7 +92,7 @@
 								<a href='#camp__awards' class="camp__section camp__section-8"><span class="select">Награды лагеря</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#camp__prices' class="camp__section camp__section-9"><span class="select">Цены</span></a>
+								<a href='#camp__prices' class="camp__section camp__section-9"><span class="select">Цена</span></a>
 							</div>
 							<div class="col-md-2">
 								<a href='#camp__registration' class="camp__section camp__section-10"><span class="select">Оформление ребёнка</span></a>
@@ -107,7 +107,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="/#hut">Бронирование домика</a>
+					<a href="/bazaotdihabelgorod.ru/#">Бронирование домика</a>
 					<ul>
 						<li><a href="#">Что входит</a></li>
 						<li><a href="#">Цены</a></li>
@@ -122,6 +122,7 @@
 
 <!-- pjax -->
 <div class='pjax-container'>
+
 	<!-- header -->
 	<header class="header detskij-lager__header">
 		<div class="container">
@@ -160,33 +161,35 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Расписание заездов</h2>
-				<table class="table">
-					<tr class="tr">
-						<th class="th">№ заезда</th>
-						<th class="th">Дата начала</th>
-						<th class="th">Дата окончания</th>
-					</tr>
-					<tr class="tr">
-						<td class="td">I</td>
-						<td class="td">02.06.2016</td>
-						<td class="td">22.06.2016</td>
-					</tr>
-					<tr class="tr">
-						<td class="td">II</td>
-						<td class="td">25.06.2016</td>
-						<td class="td">15.07.2016</td>
-					</tr>
-					<tr class="tr">
-						<td class="td">III</td>
-						<td class="td">18.07.2016</td>
-						<td class="td">08.08.2016</td>
-					</tr>
-					<tr class="tr">
-						<td class="td">IV</td>
-						<td class="td">10.08.2016</td>
-						<td class="td">30.08.2016</td>
-					</tr>
-				</table>
+				<div class="scroll-wrap">
+					<table class="table">
+						<tr class="tr">
+							<th class="th">№ заезда</th>
+							<th class="th">Дата начала</th>
+							<th class="th">Дата окончания</th>
+						</tr>
+						<tr class="tr">
+							<td class="td">I</td>
+							<td class="td">02.06.2016</td>
+							<td class="td">22.06.2016</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">II</td>
+							<td class="td">25.06.2016</td>
+							<td class="td">15.07.2016</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">III</td>
+							<td class="td">18.07.2016</td>
+							<td class="td">08.08.2016</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">IV</td>
+							<td class="td">10.08.2016</td>
+							<td class="td">30.08.2016</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -197,7 +200,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Распорядок дня</h2>
-				<div class="table-wrap">
+				<div class="scroll-wrap">
 					<table class="table">
 						<tr class="tr">
 							<th class="th">Время</th>
@@ -336,8 +339,8 @@
 	<section id='camp__prices' class="section section__camp section__camp-9">
 		<div class="container">
 			<div class="content">
-				<h2 class="h2 select">Цены</h2>
-				<p class="p">Цена путёвки составляет <span class="select">13 000 руб.</span></p>
+				<h2 class="h2 select">Цена</h2>
+				<p class="p">Цена путёвки составляет <span class="select">9 100 р.</span></p>
 			</div>
 		</div>
 	</section>
@@ -348,7 +351,20 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Оформление ребёнка</h2>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Снова запятых, последний продолжил домах послушавшись эта предупредила снова. Собрал несколько, до подзаголовок если сих языком своих. Проектах, свое, букв.</p>
+				<div class="scroll-wrap">
+					<div class="select">Необходимые справки и документы</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">Справка от участкового педиатра с указанием прививок за 3 дня до заезда (день заезда считается)</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Копия свидетельства о рождении или паспорта</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Медицинский полис</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -359,58 +375,50 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Что взять с собой</h2>
-				<div class="table-wrap">
+				<div class="scroll-wrap">
 					<div class="select">Одежда и обувь</div>
 					<table class="table">
 						<tr class="tr">
-							<td class="td">Cпортивный костюм и закрытая спортивная обувь</td>
+							<td class="td">Несколько смен белья</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">кроссовки, туфли, босоножки-сандали с фиксированной пяткой, сланцы</td>
+							<td class="td">Удобная обувь для жаркой и прохладной погоды</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">бейсболка, косынка или солнцезащитная шляпа</td>
+							<td class="td">Комнатные тапочки (сланцы)</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">5-6 пар носков или гольф</td>
+							<td class="td">Спортивная обувь</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">нательное белье</td>
+							<td class="td">Свитер</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">пижама, ночная сорочка</td>
+							<td class="td">Куртка</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">2-3 футболки</td>
+							<td class="td">Спортивные костюмы (короткий и длинный)</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">шорты (2-3 шт).</td>
+							<td class="td">Купальный костюм</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Головной убор от солнца</td>
 						</tr>
 					</table>
-					
-					<div class="select">Ценные вещи</div>
-					<table class="table">
-						<tr class="tr">
-							<td class="td">Золотые украшения. Дорогая техника. Рекомендуем не давать детям с собой дорогостоящих вещей, золотых украшений, дорогой техники. Утеря подобных вещей сильно расстраивает детей и может стать источником конфликтов в отряде.</td>
-						</tr>
-					</table>
-
 					<div class="select">Предметы личной гигиены</div>
 					<table class="table">
 						<tr class="tr">
 							<td class="td">Зубная щетка и паста</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">Мыло туалетное в мыльнице</td>
-						</tr>
-						<tr class="tr">
-							<td class="td">Хозяйственное мыло</td>
+							<td class="td">Мыло в мыльнице</td>
 						</tr>
 						<tr class="tr">
 							<td class="td">Мочалка</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">шампунь</td>
+							<td class="td">Шампунь</td>
 						</tr>
 						<tr class="tr">
 							<td class="td">Полотенце</td>
@@ -419,24 +427,53 @@
 							<td class="td">Расческа</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">ножницы для ногтей</td>
+							<td class="td">Ножницы для ногтей</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Мазь от летающих и кровососущих насекомых (мошек, комаров)</td>
 						</tr>
 					</table>
 
 					<div class="select">Для девочек</div>
 					<table class="table">
 						<tr class="tr">
-							<td class="td">косметические принадлежности для ухода за кожей и телом</td>
+							<td class="td">Косметические принадлежности для ухода за кожей и телом</td>
 						</tr>
 						<tr class="tr">
-							<td class="td">гигиенические принадлежности</td>
+							<td class="td">Гигиенические принадлежности</td>
 						</tr>
 					</table>
-
-					<div class="select">Сотовый телефон</div>
+					
+					<div class="select">Не рекомендуем брать с собой</div>
 					<table class="table">
 						<tr class="tr">
-							<td class="td">Не следует давать ребенку в лагерь дорогой телефон, дети часто теряют технику</td>
+							<td class="td">Дорогие украшения (золотые серьги, цепочки, кольца)</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Сотовые телефоны</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Магнитофоны, плееры</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Электронные игры</td>
+						</tr>
+					</table>
+					<p class="p">Администрация лагеря не несёт ответственность за сохранность ценных вещей</p>
+
+					<div class="select">Запрещено брать с собой</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">Спреи и другие токсичные вещества</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Петарды и любые взрывчатые вещества</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Напитки, содержащие алкоголь</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Наркотические вещества</td>
 						</tr>
 					</table>
 				</div>
@@ -450,7 +487,28 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Посещение ребёнка</h2>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Снова запятых, последний продолжил домах послушавшись эта предупредила снова. Собрал несколько, до подзаголовок если сих языком своих. Проектах, свое, букв.</p>
+				<p class="p">Время посещения <span class="select">c 16:00 до 20:00</span> в любой день.</p>
+				<!-- <p class="p">Перечень продуктов, запрещённых санитарными службами для передачи детям в условиях загородного лагеря:</p> -->
+				<div class="scroll-wrap">
+					<div class="select">Запрещено привозить родителям</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">Газированные напитки (кроме миниральной воды)</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Развесное печенье, пирожные, торты</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Сухарики, чипсы, орешки, жевательная резинка</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Молочные продукты, птица, рыба, любые копчённости, колбасы, лапша быстрого приготовления</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Ягоды, цитрусовые, арбузы и т.д.</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</section>
