--- a/app/bazaotdihabelgorod.ru/index.html
+++ b/app/bazaotdihabelgorod.ru/index.html
@@ -56,7 +56,7 @@
 			<ul class="sf-menu mnu">
 				<li><a href="/#">Главная</a></li>
 				<li>
-					<a href="#">Лагерь</a>
+					<a href="/detskij-lager#">Лагерь</a>
 					<div class="sf-mega">
 						<div class="row">
 							<div class="col-md-2">
