--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -51,7 +51,7 @@
 	<div class='top-bar'>
 		<div class='container flex relative'>
 			<a href='#' class='logo'>
-				<img class='logo__img' src='../img/favicon/apple-touch-icon-114x114.png' alt='Сосновый бор'>
+				<img class='logo__img' src='../img/svg/logo.svg' alt='Сосновый бор'>
 			</a>
 			<ul class="sf-menu mnu">
 				<li><a href="/#">Главная</a></li>
