--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
 	<div class='top-bar'>
 		<div class='container flex relative'>
 			<a href='#' class='logo'>
-				<img class='logo__img' src='img/favicon/apple-touch-icon-114x114.png' alt='Сосновый бор'>
+				<img class='logo__img' src='img/svg/logo.svg' alt='Сосновый бор'>
 			</a>
 			<ul class="sf-menu mnu">
 				<li><a href="#">Главная</a></li>
@@ -126,7 +126,7 @@
 	<header id='header' class='header sosnovyj-bor__header'>
 		<div class='container'>
 			<div class='content'>
-				<h1 class='h1 select'>«Сосновый бор»</h1>
+				<h1 class='h1 select'>Сосновый бор</h1>
 				<p class='p'>Муниципальное бюджетное учреждение детский оздоровительный лагерь «Сосновый бор» г.Белгорода</p>
 			</div>
 		</div>
