Добавлено выделение активного меню

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 				<img class='logo__img' src='img/svg/logo.svg' alt='Сосновый бор'>
 			</a>
 			<ul class="sf-menu mnu">
-				<li><a href="#">Главная</a></li>
+				<li class='active'><a href="#header">Главная</a></li>
 				<li>
 					<a href="/detskij-lager">Лагерь</a>
 					<div class="sf-mega">
