--- a/app/bazaotdihabelgorod.ru/index.html
+++ b/app/bazaotdihabelgorod.ru/index.html
@@ -106,8 +106,8 @@
 						</div>
 					</div>
 				</li>
-				<li>
-					<a href="#">Бронирование домика</a>
+				<li class='active'>
+					<a href="#header">Бронирование домика</a>
 					<ul>
 						<li><a href="#">Что входит</a></li>
 						<li><a href="#">Цены</a></li>
@@ -124,7 +124,7 @@
 <div class='pjax-container'>
 
 	<!-- header -->
-	<header class="header bazaotdihabelgorod__header">
+	<header id='header' class="header bazaotdihabelgorod__header">
 		<div class="container">
 			<div class="content">
 				<span class="h1 select">Бронирование домика</span>
