--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -55,8 +55,8 @@
 			</a>
 			<ul class="sf-menu mnu">
 				<li><a href="/#">Главная</a></li>
-				<li>
-					<a href="#">Лагерь</a>
+				<li class='active'>
+					<a href="#header">Лагерь</a>
 					<div class="sf-mega">
 						<div class="row">
 							<div class="col-md-2">
@@ -124,7 +124,7 @@
 <div class='pjax-container'>
 
 	<!-- header -->
-	<header class="header detskij-lager__header">
+	<header id='header' class="header detskij-lager__header">
 		<div class="container">
 			<div class="content">
 				<h1 class="h1 select">Детский лагерь</h1>
