--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,8 @@
 			<ul class="sf-menu mnu">
 				<li class='active'><a href="#header">Главная</a></li>
 				<li>
-					<a href="/detskij-lager">Лагерь</a>
+					<a href="#camp">Лагерь</a>
+					<!-- <a href="/detskij-lager">Лагерь</a> -->
 					<div class="sf-mega">
 						<div class="row">
 							<div class="col-md-2">
@@ -107,7 +108,8 @@
 					</div>
 				</li>
 				<li>
-					<a href="/bazaotdihabelgorod.ru/#">Бронирование домика</a>
+					<a href="#hut">Бронирование домика</a>
+					<!-- <a href="/bazaotdihabelgorod.ru/#">Бронирование домика</a> -->
 					<ul>
 						<li><a href="#">Что входит</a></li>
 						<li><a href="#">Цены</a></li>
