Изменён логотип fixs

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,6 @@
 				<li class='active'><a href="#header">Главная</a></li>
 				<li>
 					<a href="#camp">Лагерь</a>
-					<!-- <a href="/detskij-lager">Лагерь</a> -->
 					<div class="sf-mega">
 						<div class="row">
 							<div class="col-md-2">
@@ -129,7 +128,7 @@
 		<div class='container'>
 			<div class='content'>
 				<h1 class='h1 select'>Сосновый бор</h1>
-				<p class='p'>Муниципальное бюджетное учреждение детский оздоровительный лагерь «Сосновый бор» г.Белгорода</p>
+				<div><p class='p'>Муниципальное бюджетное учреждение детский оздоровительный лагерь «Сосновый бор» г.Белгорода</p></div>
 			</div>
 		</div>
 	</header>
@@ -140,7 +139,7 @@
 		<div class='container'>
 			<div class='content'>
 				<h2 class='h2 select'>Детский лагерь</h2>
-				<p class='p'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Бросил на берегу эта то все знаках до путь, предупреждал, продолжил диких вскоре. Подпоясал если, назад вопроса приставка то о строчка.</p>
+				<div><p class='p'>В лагере, ребёнок получит массу впечатлений, найдёт новых друзей и укрепит своё здоровье.</p></div>
 				<a href='/detskij-lager' class='btn'>Подробнее</a>
 			</div>
 		</div>
