Новое оформление и структура мега-меню

--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -58,60 +58,58 @@
 				<li class='active'>
 					<a href="#header">Лагерь</a>
 					<div class="sf-mega">
-						<div class="row">
-							<div class="col-md-2">
-								<a href='#camp__photos' class="camp__section camp__section-1"><span class="select">Фотографии</span></a>
-							</div>
-							<div class="col-md-2">
-								<a href='#camp__videos' class="camp__section camp__section-2"><span class="select">Видео</span></a>
-							</div>
-							<div class="col-md-2">
-								<a href='#camp__schedule-of-races' class="camp__section camp__section-3"><span class="select">Расписание заездов</span></a>
-							</div>
-							<div class="col-md-2">
-								<a href='#camp__theorder-of-the-day' class="camp__section camp__section-4"><span class="select">Распорядок дня</span></a>
-							</div>
-							<div class="col-md-2">
-								<a href='#camp__field-trips' class="camp__section camp__section-5"><span class="select">Выездные экскурсии</span></a>
-							</div>
-							<div class="col-md-2">
-								<a href='#camp__living-conditions' class="camp__section camp__section-6"><span class="select">Условия проживания</span></a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-2">
-								<a href='#camp__food' class="camp__section camp__section-7"><span class="select">Питание</span></a>
-							</div><!-- 
-							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-2"><span class="select">Медицинское обслуживание</span></a>
-							</div> -->
-							<!-- <div class="col-md-2">
-								<a href='#' class="camp__section camp__section-3"><span class="select">Безопасность</span></a>
-							</div> -->
-							<div class="col-md-2">
-								<a href='#camp__awards' class="camp__section camp__section-8"><span class="select">Награды лагеря</span></a>
-							</div>
-							<div class="col-md-2">
-								<a href='#camp__prices' class="camp__section camp__section-9"><span class="select">Цена</span></a>
-							</div>
-							<div class="col-md-2">
-								<a href='#camp__registration' class="camp__section camp__section-10"><span class="select">Оформление ребёнка</span></a>
-							</div>
-							<div class="col-md-2">
-								<a href='#camp__to-take' class="camp__section camp__section-11"><span class="select">Что взять с собой</span></a>
-							</div>
-							<div class="col-md-2">
-								<a href='#camp__visit' class="camp__section camp__section-12"><span class="select">Посещение ребёнка</span></a>
-							</div>
-						</div>
+						<a href="#camp__photos" class="elem">
+							<span class="select">Фото</span>
+							<img class='icon' src='../img/svg/photo.svg' alt='photo'>
+						</a>
+						<a href="#camp__videos" class="elem">
+							<span class="select">Видео</span>
+							<img class='icon' src='../img/svg/video.svg' alt='video'>
+						</a>
+						<a href="#camp__schedule-of-races" class="elem">
+							<span class="select">Заезды</span>
+							<img class='icon' src='../img/svg/calendar.svg' alt='calendar'>
+						</a>
+						<a href="#camp__theorder-of-the-day" class="elem">
+							<span class="select">Распорядок дня</span>
+							<img class='icon' src='../img/svg/alarm-clock.svg' alt='alarm-clock'>
+						</a>
+						<a href="#camp__field-trips" class="elem">
+							<span class="select">Экскурсии</span>
+							<img class='icon' src='../img/svg/balloons.svg' alt='balloons'>
+						</a>
+						<a href="#camp__living-conditions" class="elem">
+							<span class="select">Условия проживания</span>
+							<img class='icon' src='../img/svg/bed.svg' alt='bed'>
+						</a>
+						<a href="#camp__food" class="elem">
+							<span class="select">Питание</span>
+							<img class='icon' src='../img/svg/plate.svg' alt='plate'>
+						</a>
+						<a href="#camp__awards" class="elem">
+							<span class="select">Награды лагеря</span>
+							<img class='icon' src='../img/svg/cup2.svg' alt='cup'>
+						</a>
+						<a href="#camp__prices" class="elem">
+							<span class="select">Цена</span>
+							<img class='icon' src='../img/svg/rub.svg' alt='rub'>
+						</a>
+						<a href="#camp__registration" class="elem">
+							<span class="select">Оформление</span>
+							<img class='icon' src='../img/svg/resolution.svg' alt='resolution'>
+						</a>
+						<a href="#camp__to-take" class="elem">
+							<span class="select">Что взять с собой</span>
+							<img class='icon' src='../img/svg/education.svg' alt='education'>
+						</a>
+						<a href="#camp__visit" class="elem">
+							<span class="select">Посещение</span>
+							<img class='icon' src='../img/svg/parents.svg' alt='parents'>
+						</a>
 					</div>
 				</li>
 				<li>
 					<a href="/bazaotdihabelgorod.ru/#">Бронирование домика</a>
-					<ul>
-						<li><a href="#">Что входит</a></li>
-						<li><a href="#">Цены</a></li>
-					</ul>
 				</li>
 				<li><a href="/#map">Карта территории</a></li>
 				<li><a href="/#contacts">Контакты</a></li>
