--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -54,7 +54,7 @@
 				<img class='logo__img' src='../img/svg/logo.svg' alt='Сосновый бор'>
 			</a>
 			<ul class="sf-menu mnu">
-				<li><a href="/#">Главная</a></li>
+				<li><a href="/">Главная</a></li>
 				<li class='active'>
 					<a href="#header">Лагерь</a>
 					<div class="sf-mega">
@@ -99,7 +99,7 @@
 							<img class='icon' src='../img/svg/resolution.svg' alt='resolution'>
 						</a>
 						<a href="#camp__to-take" class="elem">
-							<span class="select">Что взять с собой</span>
+							<span class="select">Что взять в лагерь</span>
 							<img class='icon' src='../img/svg/education.svg' alt='education'>
 						</a>
 						<a href="#camp__visit" class="elem">
@@ -372,7 +372,7 @@
 	<section id='camp__to-take' class="section section__camp section__camp-11">
 		<div class="container">
 			<div class="content">
-				<h2 class="h2 select">Что взять с собой</h2>
+				<h2 class="h2 select">Что взять в лагерь</h2>
 				<div class="scroll-wrap">
 					<div class="select">Одежда и обувь</div>
 					<table class="table">
