--- a/app/index.html
+++ b/app/index.html
@@ -58,51 +58,51 @@
 				<li>
 					<a href="#camp">Лагерь</a>
 					<div class="sf-mega">
-						<a href="/detskij-lager#camp__photos" class="elem">
+						<a href="/detskij-lager/#camp__photos" class="elem">
 							<span class="select">Фото</span>
 							<img class='icon' src='img/svg/photo.svg' alt='photo'>
 						</a>
-						<a href="/detskij-lager#camp__videos" class="elem">
+						<a href="/detskij-lager/#camp__videos" class="elem">
 							<span class="select">Видео</span>
 							<img class='icon' src='img/svg/video.svg' alt='video'>
 						</a>
-						<a href="/detskij-lager#camp__schedule-of-races" class="elem">
+						<a href="/detskij-lager/#camp__schedule-of-races" class="elem">
 							<span class="select">Заезды</span>
 							<img class='icon' src='img/svg/calendar.svg' alt='calendar'>
 						</a>
-						<a href="/detskij-lager#camp__theorder-of-the-day" class="elem">
+						<a href="/detskij-lager/#camp__theorder-of-the-day" class="elem">
 							<span class="select">Распорядок дня</span>
 							<img class='icon' src='img/svg/alarm-clock.svg' alt='alarm-clock'>
 						</a>
-						<a href="/detskij-lager#camp__field-trips" class="elem">
+						<a href="/detskij-lager/#camp__field-trips" class="elem">
 							<span class="select">Экскурсии</span>
 							<img class='icon' src='img/svg/balloons.svg' alt='balloons'>
 						</a>
-						<a href="/detskij-lager#camp__living-conditions" class="elem">
+						<a href="/detskij-lager/#camp__living-conditions" class="elem">
 							<span class="select">Условия проживания</span>
 							<img class='icon' src='img/svg/bed.svg' alt='bed'>
 						</a>
-						<a href="/detskij-lager#camp__food" class="elem">
+						<a href="/detskij-lager/#camp__food" class="elem">
 							<span class="select">Питание</span>
 							<img class='icon' src='img/svg/plate.svg' alt='plate'>
 						</a>
-						<a href="/detskij-lager#camp__awards" class="elem">
+						<a href="/detskij-lager/#camp__awards" class="elem">
 							<span class="select">Награды лагеря</span>
 							<img class='icon' src='img/svg/cup2.svg' alt='cup'>
 						</a>
-						<a href="/detskij-lager#camp__prices" class="elem">
+						<a href="/detskij-lager/#camp__prices" class="elem">
 							<span class="select">Цена</span>
 							<img class='icon' src='img/svg/rub.svg' alt='rub'>
 						</a>
-						<a href="/detskij-lager#camp__registration" class="elem">
+						<a href="/detskij-lager/#camp__registration" class="elem">
 							<span class="select">Оформление</span>
 							<img class='icon' src='img/svg/resolution.svg' alt='resolution'>
 						</a>
-						<a href="/detskij-lager#camp__to-take" class="elem">
-							<span class="select">Что взять с собой</span>
+						<a href="/detskij-lager/#camp__to-take" class="elem">
+							<span class="select">Что взять в лагерь</span>
 							<img class='icon' src='img/svg/education.svg' alt='education'>
 						</a>
-						<a href="/detskij-lager#camp__visit" class="elem">
+						<a href="/detskij-lager/#camp__visit" class="elem">
 							<span class="select">Посещение</span>
 							<img class='icon' src='img/svg/parents.svg' alt='parents'>
 						</a>
@@ -137,7 +137,7 @@
 			<div class='content'>
 				<h2 class='h2 select'>Детский лагерь</h2>
 				<div><p class='p'>В лагере, ребёнок получит массу впечатлений, найдёт новых друзей и укрепит своё здоровье.</p></div>
-				<a href='/detskij-lager' class='btn'>Подробнее</a>
+				<a href='/detskij-lager/#home' class='btn'>Подробнее</a>
 			</div>
 		</div>
 	</section>
