--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -109,7 +109,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="/bazaotdihabelgorod.ru/#">Бронирование домика</a>
+					<a href="/baza-otdiha/#">Снять домик</a>
 				</li>
 				<li><a href="/#map">Карта территории</a></li>
 				<li><a href="/#contacts">Контакты</a></li>
@@ -126,7 +126,7 @@
 		<div class="container">
 			<div class="content">
 				<h1 class="h1 select">Детский лагерь</h1>
-				<!-- <p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Выйти великий, что которой семантика знаках lorem всеми путь сих парадигматическая. Взобравшись щеке пояс большой своего всемогущая языком, знаках эта?</p> -->
+				<p class="p">Детский оздоровительный лагерь «Сосновый бор» подарит вашему ребёнку массу впечатлений, найдёт новых друзей и укрепит его здоровие.</p>
 			</div>
 		</div>
 	</header>
@@ -305,7 +305,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Условия проживания</h2>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p>
+				<!-- <p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p> -->
 			</div>
 		</div>
 	</section>
@@ -338,7 +338,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Цена</h2>
-				<p class="p">Цена путёвки составляет <span class="select">9 100 р.</span></p>
+				<p class="p">Цена путёвки составляет <span class="select">13 000 р.</span></p>
 			</div>
 		</div>
 	</section>
@@ -518,7 +518,7 @@
 <!-- footer -->
 <footer class="section footer">
 	<div class="container">
-		<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Моей над скатился имеет своих знаках переписали проектах встретил по всей лучше текстами текст, рот, своих строчка рыбного за возвращайся взобравшись.</p>
+		<!-- <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Моей над скатился имеет своих знаках переписали проектах встретил по всей лучше текстами текст, рот, своих строчка рыбного за возвращайся взобравшись.</p> -->
 		<a class='landing2top' href="http://landing2top.ru" target='_blank' rel='author'>Разработано в <span class="landing2top__logo">Landing<span>2</span>Top.ru</span></a>
 	</div>
 </footer>
