--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
 			<ul class="sf-menu mnu">
 				<li class='active'><a href="#header">Главная</a></li>
 				<li>
-					<a href="#camp">Лагерь</a>
+					<a href="#camp">Детский лагерь</a>
 					<div class="sf-mega">
 						<a href="/detskij-lager/#camp__photos" class="elem">
 							<span class="select">Фото</span>
@@ -109,7 +109,7 @@
 					</div>
 				</li>
 				<li>
-					<a href="#hut">Бронирование домика</a>
+					<a href="#hut">Снять домик</a>
 				</li>
 				<li><a href="#map">Карта территории</a></li>
 				<li><a href="#contacts">Контакты</a></li>
@@ -147,9 +147,11 @@
 	<section id='hut' class='section hut'>
 		<div class='container'>
 			<div class='content'>
-				<h2 class='h2 select'>Бронирование домика</h2>
-				<p class='p'>Проведите свои выходные или праздники с друзьями, на природе и с шашлыком. Далеко-далеко за словесными горами в стране.</p>
-				<a href='/bazaotdihabelgorod.ru' class='btn'>Подробнее</a>
+				<span class="h2 select">Снять домик</span>
+				<div class="p">
+					<h2>Снимите домик для отдыха на базе отдыха.</h2>
+					Проводите выходные и праздники вместе со своими друзьями.
+				</div>
 			</div>
 		</div>
 	</section>
@@ -160,7 +162,7 @@
 		<div class='container'>
 			<div class='content'>
 				<h2 class='h2 select'>Карта территории</h2>
-				<p class='p'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Которое что меня которой ты, снова пунктуация напоивший города реторический о безорфографичный свой агенство, проектах даль семантика, снова текст. Повстречался.</p>
+				<!-- <p class='p'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Которое что меня которой ты, снова пунктуация напоивший города реторический о безорфографичный свой агенство, проектах даль семантика, снова текст. Повстречался.</p> -->
 			</div>
 		</div>
 	</section>
@@ -194,7 +196,7 @@
 <!-- footer -->
 <footer class="section footer">
 	<div class="container">
-		<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Моей над скатился имеет своих знаках переписали проектах встретил по всей лучше текстами текст, рот, своих строчка рыбного за возвращайся взобравшись.</p>
+		<!-- <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Моей над скатился имеет своих знаках переписали проектах встретил по всей лучше текстами текст, рот, своих строчка рыбного за возвращайся взобравшись.</p> -->
 		<a class='landing2top' href="http://landing2top.ru" target='_blank' rel='author'>Разработано в <span class="landing2top__logo">Landing<span>2</span>Top.ru</span></a>
 	</div>
 </footer>
