--- a/app/baza-otdiha/index.html
+++ b/app/baza-otdiha/index.html
@@ -56,7 +56,7 @@
 			<ul class="sf-menu mnu">
 				<li><a href="/#">Главная</a></li>
 				<li>
-					<a href="/detskij-lager/#">Лагерь</a>
+					<a href="/detskij-lager/#">Детский лагерь</a>
 					<div class="sf-mega">
 						<a href="/detskij-lager/#camp__photos" class="elem">
 							<span class="select">Фото</span>
@@ -109,7 +109,7 @@
 					</div>
 				</li>
 				<li class='active'>
-					<a href="#header">Бронирование домика</a>
+					<a href="#header">Снять домик</a>
 				</li>
 				<li><a href="/#map">Карта территории</a></li>
 				<li><a href="/#contacts">Контакты</a></li>
@@ -125,15 +125,18 @@
 	<header id='header' class="header bazaotdihabelgorod__header">
 		<div class="container">
 			<div class="content">
-				<span class="h1 select">Бронирование домика</span>
-				<h1 class="p">Забронируйте домик на базе отдыха</h1>
+				<span class="h1 select">Снять домик</span>
+				<div class="p">
+					<h1>Снимите домик для отдыха на базе отдыха.</h1>
+					Проводите выходные и праздники вместе со своими друзьями.
+				</div>
 			</div>
 		</div>
 	</header>
 	<!-- the end header -->
 	
 	<!-- photos -->
-	<section id='camp__photos' class="section section__camp section__camp-1">
+	<section id='hut__photos' class="section">
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Фотографии</h2>
@@ -153,7 +156,7 @@
 <!-- footer -->
 <footer class="section footer">
 	<div class="container">
-		<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Моей над скатился имеет своих знаках переписали проектах встретил по всей лучше текстами текст, рот, своих строчка рыбного за возвращайся взобравшись.</p>
+		<!-- <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Моей над скатился имеет своих знаках переписали проектах встретил по всей лучше текстами текст, рот, своих строчка рыбного за возвращайся взобравшись.</p> -->
 		<a class='landing2top' href="http://landing2top.ru" target='_blank' rel='author'>Разработано в <span class="landing2top__logo">Landing<span>2</span>Top.ru</span></a>
 	</div>
 </footer>
