--- a/app/index.html
+++ b/app/index.html
@@ -137,7 +137,7 @@
 			<div class='content'>
 				<h2 class='h2 select'>Детский лагерь</h2>
 				<div><p class='p'>В лагере, ребёнок получит массу впечатлений, найдёт новых друзей и укрепит своё здоровье.</p></div>
-				<a href='/detskij-lager/#home' class='btn'>Подробнее</a>
+				<a href='/detskij-lager/#home' class='btn'>Перейти</a>
 			</div>
 		</div>
 	</section>
