--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -126,7 +126,7 @@
 		<div class="container">
 			<div class="content">
 				<h1 class="h1 select">Детский лагерь</h1>
-				<p class="p">Детский оздоровительный лагерь «Сосновый бор» подарит вашему ребёнку массу впечатлений, найдёт новых друзей и укрепит его здоровие.</p>
+				<p class="p">Детский оздоровительный лагерь «Сосновый бор» подарит вашему ребёнку массу впечатлений, поможет найти новых друзей и укрепит его здоровие.</p>
 			</div>
 		</div>
 	</header>
