debug and fix navigation

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
 			<ul class="sf-menu mnu">
 				<li class='active'><a href="#header">Главная</a></li>
 				<li>
-					<a href="#camp">Детский лагерь</a>
+					<a href="/detskij-lager/#home">Детский лагерь</a>
 					<div class="sf-mega">
 						<a href="/detskij-lager/#camp__photos" class="elem">
 							<span class="select">Фото</span>
@@ -108,9 +108,9 @@
 						</a>
 					</div>
 				</li>
-				<li>
-					<a href="#hut">Снять домик</a>
-				</li>
+				<li class='hidden'><a href="#camp">Детский лагерь</a></li>
+				<li><a href="/baza-otdiha/#home">Снять домик</a></li>
+				<li class='hidden'><a href="#hut">Снять домик</a></li>
 				<li><a href="#map">Карта территории</a></li>
 				<li><a href="#contacts">Контакты</a></li>
 			</ul>
@@ -137,7 +137,7 @@
 			<div class='content'>
 				<h2 class='h2 select'>Детский лагерь</h2>
 				<div><p class='p'>В лагере, ребёнок получит массу впечатлений, найдёт новых друзей и укрепит своё здоровье.</p></div>
-				<a href='/detskij-lager/#home' class='btn'>Перейти</a>
+				<a href='/detskij-lager/#home' class='btn'>Перейти <i class="fa fa-angle-right" aria-hidden="true"></i></a>
 			</div>
 		</div>
 	</section>
@@ -152,6 +152,7 @@
 					<h2>Снимите домик для отдыха на базе отдыха.</h2>
 					Проводите выходные и праздники вместе со своими друзьями.
 				</div>
+				<a href='/baza-otdiha/#home' class='btn'>Перейти <i class="fa fa-angle-right" aria-hidden="true"></i></a>
 			</div>
 		</div>
 	</section>
