--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -56,7 +56,7 @@
 			<ul class="sf-menu mnu">
 				<li><a href="/">Главная</a></li>
 				<li class='active'>
-					<a href="#header">Лагерь</a>
+					<a href="#header">Детский лагерь</a>
 					<div class="sf-mega">
 						<a href="#camp__photos" class="elem">
 							<span class="select">Фото</span>
