Добавлена видеогаллерея, подключены плагины — imageloaded и imagefill

--- a/app/baza-otdiha/index.html
+++ b/app/baza-otdiha/index.html
@@ -127,7 +127,7 @@
 			<div class="content">
 				<span class="h1 select">Снять домик</span>
 				<div class="p">
-					<h1>Снимите домик для отдыха на базе отдыха.</h1>
+					<h1>Снимите домик на базе отдыха.</h1>
 					Проводите выходные и праздники вместе со своими друзьями.
 				</div>
 			</div>
