Закончена страница — Забронировать домик

--- a/app/baza-otdiha/index.html
+++ b/app/baza-otdiha/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset='utf-8'>
 
-	<title>Детский Лагерь - «Сосновый бор»</title>
+	<title>База отдыха — «Сосновый бор»</title>
 	<meta name='description' content=''>
 
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -166,7 +166,20 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Фотографии</h2>
-				<!-- <p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p> -->
+				<div class="scroll-wrap zoom-gallery">
+					<a href="../img/hut-gallery/hut-gallery (1).jpg" class="gallery__elem"><img src="../img/hut-gallery/min/hut-gallery (1).jpg" alt="Лагерь Сосновый бор" class="img"></a>
+					<a href="../img/hut-gallery/hut-gallery (2).jpg" class="gallery__elem"><img src="../img/hut-gallery/min/hut-gallery (2).jpg" alt="Лагерь Сосновый бор" class="img"></a>
+					<a href="../img/hut-gallery/hut-gallery (3).jpg" class="gallery__elem"><img src="../img/hut-gallery/min/hut-gallery (3).jpg" alt="Лагерь Сосновый бор" class="img"></a>
+					<a href="../img/hut-gallery/hut-gallery (4).jpg" class="gallery__elem"><img src="../img/hut-gallery/min/hut-gallery (4).jpg" alt="Лагерь Сосновый бор" class="img"></a>
+					<a href="../img/hut-gallery/hut-gallery (5).jpg" class="gallery__elem"><img src="../img/hut-gallery/min/hut-gallery (5).jpg" alt="Лагерь Сосновый бор" class="img"></a>
+					<a href="../img/hut-gallery/hut-gallery (6).jpg" class="gallery__elem"><img src="../img/hut-gallery/min/hut-gallery (6).jpg" alt="Лагерь Сосновый бор" class="img"></a>
+					<a href="../img/hut-gallery/hut-gallery (7).jpg" class="gallery__elem"><img src="../img/hut-gallery/min/hut-gallery (7).jpg" alt="Лагерь Сосновый бор" class="img"></a>
+					<a href="../img/hut-gallery/hut-gallery (8).jpg" class="gallery__elem"><img src="../img/hut-gallery/min/hut-gallery (8).jpg" alt="Лагерь Сосновый бор" class="img"></a>
+					<a href="../img/hut-gallery/hut-gallery (9).jpg" class="gallery__elem"><img src="../img/hut-gallery/min/hut-gallery (9).jpg" alt="Лагерь Сосновый бор" class="img"></a>
+
+					
+					<!-- a.gallery__elem[href='../img/hut-gallery/hut-gallery ($).jpg']*14>img.img[src='../img/hut-gallery/min/hut-gallery ($).jpg' alt='Лагерь Сосновый бор'] -->
+				</div>
 			</div>
 		</div>
 	</section>
@@ -177,7 +190,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Когда можно снять</h2>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p>
+				<p class="p">Забронировать домик, вы можете после лагерного периода, <span class="select">с 3.09.2016 по 19.06.2017</span>.</p>
 			</div>
 		</div>
 	</section>
@@ -188,7 +201,22 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Комплектация</h2>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p>
+				<div class="select">Внутри</div>
+				<table class="table">
+						<tr class="tr"><td class="td">Микроволновая печь</td></tr>
+						<tr class="tr"><td class="td">Электрочайник</td></tr>
+						<!-- <tr class="tr"><td class="td">Стол</td></tr> -->
+						<!-- <tr class="tr"><td class="td">Две скамейки</td></tr> -->
+						<tr class="tr"><td class="td">Душевая с горячей водой</td></tr>
+						<tr class="tr"><td class="td">Туалет</td></tr>
+				</table>
+				<div class="select">Снаружи</div>
+				<table class="table">
+						<tr class="tr"><td class="td">Беседка*</td></tr>
+						<tr class="tr"><td class="td">Мангал</td></tr>
+						<tr class="tr"><td class="td">Решётка гриль</td></tr>
+				</table>
+				<p class="p">* — Беседка прилагается не к каждому домику.</p>
 			</div>
 		</div>
 	</section>
@@ -199,7 +227,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Вместимость</h2>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p>
+				<p class="p">Домик имеет <span class="select">18 спальных мест</span>, разделённых на 4 спальни</p>
 			</div>
 		</div>
 	</section>
@@ -210,7 +238,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Цена</h2>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p>
+				<p class="p">Стоимость 1 домика составляет <span class="select">5 000р./сут.</span></p>
 			</div>
 		</div>
 	</section>
@@ -221,7 +249,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Расчётный час</h2>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p>
+				<p class="p">Расчётный час в <span class="select">15:00</span></p>
 			</div>
 		</div>
 	</section>
