--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -500,7 +500,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Цена</h2>
-				<p class="p">Цена путёвки составляет <span class="select">13 000 р.</span></p>
+				<p class="p">Цена путёвки составляет <span class="select">13 000р.</span>. Длительность путёвки <span class="select">20 дней</span>.</p>
 			</div>
 		</div>
 	</section>
